# linuxblaster_control

./: Cargo.toml  LICENSE  README.md  UsbProtocol.md  bitmask_sniffer.py  build.rs  flake.nix  usb-spec.txt
alsa-fix/: 91-soundblasterx-g6.rules  README.md  flake.nix.txt  install.sh  soundblasterx-g6-alsa-fix.sh
nix/: package.nix
sniffer/: Cargo.toml  Parser.ipynb  Untitled.ipynb  get_crystalizer_custom-01.json  get_crystalizer_custom-01.pcapng  get_crystalizer_custom-02.json  sbc_startup-01.json  sbc_startup-01.pcapng  set_audioquality_24bit_192khz.json  set_audioquality_24bit_192khz.pcapng  set_audioquality_24bit_48khz.json  set_crystalizer_off-01.json  set_crystalizer_off-02.json  set_crystalizer_off-03.json  set_crystalizer_off-03.pcapng  set_crystalizer_off-customPacket-01.json  set_crystalizer_off-customPacket-01.pcapng  set_crystalizer_off-sbxComparison-01.json  set_crystalizer_off-sbxComparison-01.pcapng  set_crystalizer_off.json  set_crystalizer_on-01.json  set_crystalizer_on-01.pcapng  set_crystalizer_on-02.json  set_crystalizer_on-03.json  set_crystalizer_on-03.pcapng  set_crystalizer_on.json  set_eq_62hz_0db.json  set_eq_62hz_0db.pcapng  set_eq_off.json  set_eq_off.pcapng  set_eq_on.json  set_filter_fast_linear.json  set_filter_fast_linear.pcapng  set_filter_fast_minimal.json  set_filter_slow_linear.json  set_filter_slow_linear.pcapng  set_filter_slow_minimal.json  set_output_headphones.json  set_output_speakers.json  set_sbx_off.json  (+3 more)
src/: app.rs  features.rs  lib.rs  macros.rs  main.rs  tests.rs  ui.rs
testing/: flake.nix  test_usb.py
(+51 files in other folders)
