[package]
name = "linuxblaster_control"
version = "2.0.0"
edition = "2024"

[dependencies]
eframe = "0.33.3"
egui_plot = "0.34.0"
fuzzy-matcher = "0.3.7"
hidapi = { version = "2.6.4", default-features = false, features = [
    "linux-static-libusb",
] }
phf = "0.13.1"
rfd = "0.17.2"
rusb = "0.9.4"
serde = "1.0.228"
serde_json = "1.0.148"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[build-dependencies]
phf_codegen = "0.13.1"
walkdir = "2.5.0"
